rename to graphillion from illion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
-SET(SRCS hudd/bddc hudd/BDD hudd/ZBDD illion/setset illion/util illion/zdd)
+SET(SRCS hudd/bddc hudd/BDD hudd/ZBDD graphillion/setset graphillion/util
+  graphillion/zdd)
 
 ADD_LIBRARY(${PROJECT_NAME} ${SRCS})
 INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib)
 
-ADD_EXECUTABLE(${PROJECT_NAME}_test ${SRCS} illion/test)
+ADD_EXECUTABLE(${PROJECT_NAME}_test ${SRCS} graphillion/test)
