mv c++ tests to src/test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,6 @@ SET(SRCS SAPPOROBDD/bddc SAPPOROBDD/BDD SAPPOROBDD/ZBDD
 ADD_LIBRARY(${PROJECT_NAME} ${SRCS})
 INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib)
 
-ADD_EXECUTABLE(${PROJECT_NAME}_test ${SRCS} graphillion/test)
+ADD_EXECUTABLE(test_setset ${SRCS} test/setset)
+
+ADD_TEST(setset ./test_setset)
