--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ SET(${PROJECT_NAME}_MINOR_VERSION 1)
 SET(${PROJECT_NAME}_PATCH_LEVEL 0)
 
 SET(CMAKE_BUILD_TYPE None) # None, Debug, Release
-SET(CMAKE_C_FLAGS "-Wall -O3")
-SET(CMAKE_CXX_FLAGS "-Wall -O3")
+SET(CMAKE_C_FLAGS "-Wall -O3 -g")
+SET(CMAKE_CXX_FLAGS "-Wall -O3 -g")
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
 
