--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ SET(CMAKE_CXX_FLAGS "-Wall -O3 -g")
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
 
+ADD_DEFINITIONS(-DB_64)
+
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
    
 ENABLE_TESTING()
