--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,5 @@
 envlist = py26, py27, py33, py34, py35
 
 [testenv]
-deps = nose
 commands =
-  python setup.py clean --all develop
-  nosetests
+  python setup.py clean --all test
