--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 on:
   push:
     branches:
-      - "**"
+      - master
   pull_request:
     branches:
-      - "**"
+      - master
 
 jobs:
   run-test:
