Change the package name 'Graphillion' into 'graphillion' because PyPI requires the normalized package name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Graphillion"
+name = "graphillion"
 version = "2.0rc0"
 description = "Fast, lightweight library for a huge number of graphs"
 authors = [
