--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,8 @@ authors = [
     {name = "Hiroki Yamazaki"},
     {name = "Takeshi Konishi"}
 ]
-readme = "README.md"
-license = "MIT"
-license-files = ["LICENSE.txt"]
+readme = {file = "README.md", content-type = "text/markdown"}
+license = { text = "MIT License" }
 keywords = ["graph", "set", "math", "network"]
 classifiers = [
         "Development Status :: 4 - Beta",
